@@ -3873,6 +3873,7 @@ void KoTextParag::setDirection( QChar::Direction d )
 	invalidate( 0 );
         //// kotext
         m_layout.direction = d;
+       invalidateCounters(); // #47178
         ////
     }
 }
